# Bedrock-RAG-Application

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
backend/: __init__.py  bedrock.py  logger.py  main.py  requests.py  responses.py
frontend/: __init__.py  app.py
frontend/components/: __init__.py  chat.py  metrics.py  sidebar.py
frontend/config/: __init__.py  settings.py
frontend/utils/: __init__.py  aws_client.py  session_state.py
