[project]
name = "bedrock-rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "altair<5",
    "asyncio-extras>=1.3.2",
    "boto3>=1.38.23",
    "botocore>=1.38.23",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.23",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "pydantic>=2.11.5",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "streamlit-extras>=0.7.1",
    "uvicorn>=0.34.2",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
